--- a/reconstruction.rmd
+++ b/reconstruction.rmd
@@ -12,7 +12,7 @@ header-includes:
     - \usepackage{setspace}
     - \doublespacing
 abstract:
-    "Many accounts of big data systems assume that they target individuals. Personalization, with all the risks of discrimination and bias it entails, has been the focus of inquiry. This paper suggests that personalization occurs against a more expansive background that in principle is not reducible to individual attributes and desires, but includes many different forms of relations in flux. It describes the 'personalization' of an online grocery shopping recommender system. It reconstructs an account of how a recommender system constructs an ordered list of a small number of grocery items of personal relevance for each of the millions of online grocery shoppers in  a major UK supermarket chain. Drawing on a theory of probability proposed by the philsopher of science Karl Popper, it suggests that personal relevance is inevitably bound up with relations to others, and the relations between things. Using a mixture of discourse analysis and code-based reconstruction of key elements of the recommender system, it suggests that personalization is one provisional stabilization of a much more open-ended weave of propensities associated with people and things in contemporary big data configurations.   The paper explores how in the context of recommender systems the constitutive incompleteness of shopping lists, their propensity to expand or change, becomes more important than their capacity to be personalized."
+    "Many accounts of big data platforms assume that they target individuals. Personalization, with all the risks of discrimination and bias it entails, has been the focus of inquiry. This paper suggests that personalization occurs against a more expansive background that in principle is not reducible to individual attributes and desires, but includes many different forms of relations in flux. It describes the 'personalization' of an online grocery shopping recommender system. It reconstructs an account of how a recommender system constructs an ordered list of a small number of grocery items of personal relevance for each of the millions of online grocery shoppers in  a major UK supermarket chain. Drawing on a theory of probability proposed by the philsopher of science Karl Popper, it suggests that personal relevance is inevitably bound up with relations to others, and the relations between things. Using a mixture of discourse analysis and code-based reconstruction of key elements of the recommender system, it suggests that personalization is one facet of a much more open-ended weave of propensities associated with people and things in contemporary big data configurations.   The paper explores how in the context of recommender systems the constitutive incompleteness of shopping lists, their propensity to expand or change, might be more important than their capacity to be personalized."
 ---
 
 ```{r setup2, cache=FALSE, include=FALSE}
