--- a/reconstruction.rmd
+++ b/reconstruction.rmd
@@ -70,7 +70,7 @@ TBA - short paragraph summarising the social theory of list ordering; make sure 
 
 # D. Archaeology of recommendations:  from 1984  to 2007
 
-The main narrative of Patel's presentation concerned a shift from a well-established loyalty-card based data-mining model to a predictive, probabilistic, personally relevant re-writing of the shopping list in almost-realtime. The changes Patel described are increasingly widespread and common. While they are configured in Tesco-specific ways by DunnHumby (and this reflects a longer history), they are also broadly typical. Tesco is the largest supermarket chain in UK, famous amongst retailers for its  customer loyalty and targeted marketing programme known as 'Tesco Clubcard,' which started in 1991. DunnHumby -- founded by operations researchers Edwina Dunn and Clive Humby -- is said to have convinced the CEO of Tesco sometime in 1991 that a loyalty card program could change the supermarket chain's relationship to its customers.  Clive Humby's academic publications  are hard to track down, but an early paper given at the _Conference of Young Operational Researchers_ in Nottingham in 1984 suggests the direction that he, DunnHumby and later Tesco would take in constructing lists [@OKeefe_1984]. The abstract for Humby's presentation pre-figures an ongoing trajectory for data mining techniques aimed at eliciting detailed information on individual customer preferences.   
+The main narrative of Patel's presentation concerned a shift from a well-established loyalty-card based data-mining model to a predictive, probabilistic, personally relevant re-writing of the shopping list in almost-realtime. The changes Patel described are increasingly widespread and common. While they are configured in Tesco-specific ways by DunnHumby (and this reflects a longer history), they are also broadly typical. Tesco is the largest supermarket chain in UK, famous amongst retailers for its  customer loyalty and targeted marketing programme known as 'Tesco Clubcard,' which started in 1991. DunnHumby -- founded by operations researchers Edwina Dunn and Clive Humby -- is said to have convinced the CEO of Tesco sometime in 1991 that a loyalty card program could change the supermarket chain's relationship to its customers.  Clive Humby's academic publications are hard to track down (see [@Humby_1989] where Humby argues for the need to add lifestage data to neighbourhood data in marketing research), but an early paper given at the _Conference of Young Operational Researchers_ in Nottingham in 1984 suggests the direction that he, DunnHumby and later Tesco would take in constructing lists [@OKeefe_1984]. The abstract for Humby's presentation pre-figures an ongoing trajectory for data mining techniques aimed at eliciting detailed information on individual customer references.   
 
 ```{r humby-1984, fig.cap = 'Abstract from a Clive Humby presentation (Humby,1984)'}
 include_graphics('figure/2_humby_young_org_1994.png')
@@ -198,23 +198,24 @@ Nonetheless, experimentalization, the practice of creating conditions that reduc
 
 It is perhaps significant that this random allocation of customers to control and test groups occurs without any relation to the particular profile or propensities of the customer. It seeks to statistically validate the effects -- the *uplift* -- of the model on  conversion events by allowing the effects of the model on what people do to be measured. The uplift refers to conversion events associated with the same groups of people. Effectively an experiment in inhabiting two different worlds, the randomised control trial  sets up a feedback look between the predictive model (the logistic regression), and the world.
 
-[^122]: See [@Lo_2002] for an introduction to the construction of experimental set ups for uplift models. Market researchers and data miners seem to have started adopting a statistically grounded experimental predictive practice sometimes around 2000. See for instance [@Almquist_2001]  Response modelling, 'propensity' modelling and uplift modelling all seek to identify associations between 'treatments' or interventions and the 'Responders', the people  affected by the treatment.  
+[^122]: See [@Lo_2002] for an introduction to the construction of experimental set ups for uplift models in marketing research. Market researchers and data miners seem to have started adopting a statistically-grounded experimental predictive practice around 2000. See for instance [@Almquist_2001]  Response modelling, 'propensity' modelling and uplift modelling all seek to identify associations between 'treatments' or interventions and the 'Responders', the people  affected by the treatment.
 
-## The openness of the data -- new possibilities
+## The openness of the data: new features
 
 Whatever disturbing factors or interferences the experimental trials of different predictive models reduce, a broader and ineluctable stream of propensities remains in operation. Popper's account of probabilities as propensities presents openness as concomitant to realization:
 
 >What may happen in the future .. is, to some extent, open. There are many possibilities trying to realize themselves, but few of them have a very high propensity, given the initial conditions [@Popper_1990, 22].
 
-There are two ways of reading this statement. One is to see Popper as stating a triusm,  the obvious consequence of his physicalist understanding of probabilities as tendencies inherent in a situation. Another is to focus on the pivotal phrase 'possibilities trying to realize themselves' by asking what 'trying to realize' might mean in practice. I would suggest that DunnHumby's work on the new personal relevance model is just such a 'trying to realize' in important ways.   
+There are different ways of reading this statement. We can read Popper as stating a truism,  the obvious consequence of his physicalist understanding of probabilities as tendencies inherent in a situation: anything can happen in the future. An alternative, perhaps more interesting reading  focuses on the pivotal phrase: 'possibilities trying to realize themselves.' What does 'trying to realize' might mean in practice? I would suggest that DunnHumby's work on the new personal relevance model, and much big data practice in general,  contains just such a 'trying to realize' in practice. 
 
-Several times, Patel emphasized the importance of 'constructing good features' from the data, and much of her presentation concerned different attempts to construct 'good features.' A 'feature' in the context of machine learning refers to a variable included in a predictive model. A 'good feature' is one that somehow improves the accuracy, precision, specificity or any of the panoply of measures applied to machine learning models in practice.
-HERE
-The precise meaning of 'good', however, remains open to many different attempts, experiments and variations. I find it interesting that the main efforts that DunnHumby made to  construct good features were not closely associated with personhood, but with the relations -- the propensities -- between things. Patel, for instance, addressed the problem of 'basket similarity,' the problem that the recommender system might recommend something similar to items already in a customer's basket. A customer might be willing to substitute a similar item for something they have already chosen, but they are more likely to accept a recommendation that complements rather than duplicates items in their list. How could the recommender system sense the possible substitutions and complementaries between things for a given customer, especially since a person's sensibilities and susceptibilities concerning groceries will be subtly shaped by wider social groups, orderings and circumstances?  It could only do that if had some sense of the relation between items already in the list and the field of possible recommendations. The 'personal relevance' model, therefore, sought to include the relation between recommendations and items already ordered. The data scientists constructed a new feature from the data concerning how the substitutabilities and complementarities between product.  Taking all the baskets of items purchased, rather in the way that association rules does, a new feature, what DunnyHumby termed 'self-learning substitutes' was derived. The 'self learning substitutes' feature of the relevancy model draws on another data matrix, the product similarity matrix, itself generated from all previous recommendations that have led to conversion events (that is, 'a user clicked as the response'). A customer's recommendation list might already include `Tesco Ginger Nuts 300g.`   The 'self-learning substitution model' seeks to replace list items with similar but higher value items: `Mcvitie's Ginger Moments 400g.`
+Several times in her presentation, Patel emphasized the importance of 'constructing good features' from the data, and much of her presentation concerned DunnHumby's efforts to construct 'good features.' A 'feature' in the context of machine learning refers to a variable included in a predictive model. A 'good feature' contributes to the accuracy, precision, specificity or any of the panoply of measures applied to machine learning models in practice. The construction of 'good features', however, remains open to many different possibilities, some of which are more practically feasible than others.
 
-This new feature is complex. Patel mentioned that it took the form of a 'design matrix of 14,000 columns.' This means that 14,000 new explanatory variables were added to the logistic regression model producing the recommendations. Each recommendation would be subtly re-weighted by this complex derived feature. The complexity of the model itself introduces new instabilities, new 'possibilities trying to realize themselves' and the DunnyHumby data scientists used  '`L1 regularization` to drive coefficients down to zero', or, put more simply, to exclude variables there were not contributing much to the predictions produced by the model.
+The main efforts that DunnHumby made to  construct good features were not closely associated with personhood, but with the relations -- the propensities -- between things. Patel, for instance, addressed the problem of 'basket similarity.' The recommender system should not recommend items that are too similar to groceries already in a customer's basket. A customer might be willing to substitute a similar item for something they have already chosen, but they are more likely to accept a recommendation that complements rather than duplicates items in their list. How could the recommender system sense the possible similiarities and complementaries between things in general or for a given customer, especially since a person's sensibilities and susceptibilities concerning groceries will be subtly shaped by wider social groups, orderings and circumstances? 
 
-Even this added feature, a complex addition in many respects, does not exhaust DunnHumby's attempts to re-shape the recommender system. They were just beginning, Patel reported, to address complementarities between things. `Nutella` complements `bananas,` but the converse is not necessarily true since `bananas` need not complement `nutella,` especially if I have nut allergies.  From the standpoint of customer data science, Patel emphasised the operational significance of predicting complementarities:  'complementarity drives conversion.' Bringing the matrix of similarities expressed as numerical associations between products into the model improves the conversion of recommendations into purchases.
+The predictive model could only do that if it had some sense of the relation between items already in the list and the field of possible recommendations. The 'personal relevance' model, therefore, sought to include the similarities and complementarities between items already ordered and recommendations. The DunnyHumby data scientists constructed a new feature from the data measuring substitutability and complementarity between products.  Taking all the baskets of items purchased, a new feature, what DunnyHumby termed 'self-learning substitutes' was derived. Added to the relevancy model, the 'self learning substitutes' feature adds another data matrix, the product similarity matrix, itself generated from all previous recommendations that have led to conversion events (that is, 'a user clicked as the response'). A customer's recommendation list might already include `Tesco Ginger Nuts 300g.`   The 'self-learning substitution model' seeks to replace list items with similar but higher value items: `Mcvitie's Ginger Moments 400g.` 
+The self-learning substitutes feature is complex. Patel mentioned that it took the form of a 'design matrix of 14,000 columns.' 14,000 new explanatory variables were added to the logistic regression model producing the recommendations. Each recommendation would be subtly re-weighted by this complex derived feature.[^215]
+
+[^215]: The proliferation of variables or features in the model itself introduces new instabilities, new 'possibilities trying to realize themselves' and the DunnyHumby data scientists used  '`L1 regularization` to drive coefficients down to zero', or, put more simply, to exclude variables there were not contributing much to the predictions produced by the model. Even this added feature does not exhaust DunnHumby's attempts to re-shape the recommender system. They were just beginning, Patel reported, to model complementarities between things. `Nutella` complements `bananas,` but the converse is not necessarily true since `bananas` need not complement `nutella,` especially if I have nut allergies.  From the standpoint of customer data science, Patel emphasised the operational significance of predicting complementarities:  'complementarity drives conversion.' 
 
 # F. Conclusion
 
