--- a/log.rmd
+++ b/log.rmd
@@ -602,4 +602,6 @@ or
 ## Thu 31 Aug 2017 16:34:43 BST
 - long gap here -- due to important other activities such as summer holidays;  
 - found the 1989 Humby article on demographics -- argues for the need to add lifestage to that of neighbourhood. 
-- TODO: add reference to [@Humby_1989]
+- DONE: add reference to [@Humby_1989]
+- reached conclusion in adding edits. Not sure if the section on Popper and possibiities trying to realize themselves is fleshed out enough.
+- TODO: check if the last section does enough with propensities and the new features.  
